[issue-1] add dialyxir

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,3 +15,4 @@ jobs:
       - run: mix deps.get
       - run: mix deps.compile
       - run: mix compile --force --return-errors
+      - run: mix dialyzer --list-unused-filters
