--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,4 +15,5 @@ jobs:
       - run: mix deps.get
       - run: mix deps.compile
       - run: mix compile --force --return-errors
+      - run: mix credo --strict
       - run: mix dialyzer --list-unused-filters
