--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,5 +15,6 @@ jobs:
       - run: mix deps.get
       - run: mix deps.compile
       - run: mix compile --force --return-errors
+      - run: mix format --check-formatted
       - run: mix credo --strict
       - run: mix dialyzer --list-unused-filters
