[issue-1] add ex_doc (and mix doc to CI and all_tests)

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,6 @@ jobs:
       - run: mix deps.compile
       - run: mix compile --force --return-errors
       - run: mix format --check-formatted
+      - run: mix docs --output test/doc
       - run: mix credo --strict
       - run: mix dialyzer --list-unused-filters
