--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 # Where third-party dependencies like ExDoc output generated docs.
 /doc/
+/test/doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
@@ -21,4 +22,3 @@ erl_crash.dump
 
 # Ignore package tarball (built via "mix hex.build").
 noray-*.tar
-
