--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,10 +12,35 @@ jobs:
         with:
           otp-version: '23.0.3'
           elixir-version: '1.10.4'
-      - run: mix deps.get
-      - run: mix deps.compile
-      - run: mix compile --force --return-errors
-      - run: mix format --check-formatted
-      - run: mix docs --output test/doc
-      - run: mix credo --strict
-      - run: mix dialyzer --list-unused-filters
+      - name: Retrieve Mix Dependencies Cache
+        uses: actions/cache@v1
+        id: mix-cache
+        with:
+          path: deps
+          key: ${{ runner.os }}-mix-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+      - name: Install Mix Dependencies
+        if: steps.mix-cache.outputs.cache-hit != 'true'
+        run: mix deps.get
+      - name: Compile Dependencies
+        run: mix deps.compile
+      - name: Compile Project
+        run: mix compile --force --return-errors
+      - name: Check Formatting
+        run: mix format --check-formatted
+      - name: Generate Docs
+        run: mix docs --output test/doc
+      - name: Run Credo
+        run: mix credo --strict
+      - name: Retrieve PLT Cache
+        uses: actions/cache@v1
+        id: plt-cache
+        with:
+          path: priv/plts
+          key: ${{ runner.os }}-plts-${{ hashFiles(format('{0}{1}', github.workspace, '/mix.lock')) }}
+      - name: Create PLTs
+        if: steps.plt-cache.outputs.cache-hit != 'true'
+        run: |
+          mkdir -p priv/plts
+          mix dialyzer --plt
+      - name: Run Dialyzer
+        run: mix dialyzer --no-check --list-unused-filters
